--- a/views/mobileVerification.ejs
+++ b/views/mobileVerification.ejs
@@ -30,9 +30,11 @@
 					<div class="form-group">
 				    	<input type="input" class="form-control" id="code" name="code" placeholder="Verification Code">
 				 	</div>
+				 	<% if(typeof code != 'undefined') { %>
 				 	<div class="form-group">
-				    	<img id="qrcode" src="">
+				    	<img id="qrcode" src="/qr/<%= code %>">
 				 	</div>
+				 	<% } %>
 				 	<button type="submit" class="btn btn-default">Submit</button>
 				</form>
 			</div>
