--- a/views/priceRangePage.ejs
+++ b/views/priceRangePage.ejs
@@ -13,61 +13,28 @@
 <body>
 	<div id="main">
 		<div id="header">
-			<a href="homepage.html"><img src="/images/sidebysidelogo_header.svg" alt=""></a>
+			<a href="/homepage"><img src="/images/sidebysidelogo_header.svg" alt=""></a>
 			<div id="header_options">
-				<a href="" class="user_element"><img id="user_icon" src="/images/user168.svg" alt="">    Divya Prabhakar</a>
-				<a href="" class="user_element"><img id="logout_icon" src="/images/logout21.svg" alt=""></a>
+				<a href="" class="user_element"><img id="user_icon" src="/images/user168.svg" alt="">    <%= name %></a>
+				<a href="/logout" class="user_element"><img id="logout_icon" src="/images/logout21.svg" alt=""></a>
 			</div>
 		</div>	
 		
-		<h1>Name of the new restaurant</h1>
+		<h1><%= plan %></h1>
 		<h3>Choose the price range for your restaurant.</h3>
 
 		
 		<div id="content">
 			<div class="content_element" id="suggested_providers">
-				<p id="suggested_providers_title">Suggested Providers</p>
+				<p id="suggested_providers_title">Top ISP Providers in your area</p>
 				<ul>
-					<li>
-						<p class="provider_details">Bob's hardware</p>
-						<p class="provider_details">267 273 6314</p>
-						<a class="provider_details" href="">Website</a>
+					<% for(var i=0; i<5; i++) { %>
+					<li> 
+						<p class="provider_details"><b><%= businesses[i][0] %></b></p>
+						<p class="provider_details"><%= businesses[i][1] %></p>
+						<a class="provider_details" href="<%= businesses[i][2] %>">Link</a>
 					</li>
-					<li>
-						<p class="provider_details">Bob's hardware</p>
-						<p class="provider_details">267 273 6314</p>
-						<a class="provider_details" href="">Website</a>
-					</li>
-					<li>
-						<p class="provider_details">Bob's hardware</p>
-						<p class="provider_details">267 273 6314</p>
-						<a class="provider_details" href="">Website</a>
-					</li>
-					<li>
-						<p class="provider_details">Bob's hardware</p>
-						<p class="provider_details">267 273 6314</p>
-						<a class="provider_details" href="">Website</a>
-					</li>
-					<li>
-						<p class="provider_details">Bob's hardware</p>
-						<p class="provider_details">267 273 6314</p>
-						<a class="provider_details" href="">Website</a>
-					</li>
-					<li>
-						<p class="provider_details">Bob's hardware</p>
-						<p class="provider_details">267 273 6314</p>
-						<a class="provider_details" href="">Website</a>
-					</li>
-					<li>
-						<p class="provider_details">Bob's hardware</p>
-						<p class="provider_details">267 273 6314</p>
-						<a class="provider_details" href="">Website</a>
-					</li>
-					<li>
-						<p class="provider_details">Bob's hardware</p>
-						<p class="provider_details">267 273 6314</p>
-						<a class="provider_details" href="">Website</a>
-					</li>
+					<% } %>
 				</ul>
 			</div>
 			<div class="content_element" id="statistics">
@@ -131,9 +98,9 @@ d3.select('#chart').append('svg')
             .style('fill', tempColor)
     })
 
-   .on('click', function(d) {
-       var object = d3.select(this);
-       selected = this;
+   .on('click', function(d, i) {
+       selected = i;
+       location.href = "/savepricerange?choice="+selected;
     })
 
 var hAxis = d3.svg.axis()
