--- a/views/priceRangePage.ejs
+++ b/views/priceRangePage.ejs
@@ -21,12 +21,12 @@
 		</div>	
 		
 		<h1><%= plan %></h1>
-		<h3>Choose the price range for your restaurant.</h3>
+		<h3>The succes rate for various price ranges is shown below. Choose the price range for your business.</h3>
 
 		
 		<div id="content">
 			<div class="content_element" id="suggested_providers">
-				<p id="suggested_providers_title">Top ISP Providers in your area</p>
+				<p id="suggested_providers_title">ISP Providers close to you</p>
 				<ul>
 					<% for(var i=0; i<5; i++) { %>
 					<li> 
