--- a/views/parkingPage.ejs
+++ b/views/parkingPage.ejs
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Side by Side</title>
 	<link rel="stylesheet" href="/stylesheets/global.css">
-	<link rel="stylesheet" href="/stylesheets/ambiance.css">
+	<link rel="stylesheet" href="/stylesheets/parking.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script type="text/javascript" src="/javascripts/jquery-1.9.1.min.js"></script>
 	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
@@ -21,12 +21,12 @@
 		</div>	
 		
 		<h1><%= plan %></h1>
-		<h3>The succes rate for various ambiances is shown below. Choose the ambiance for your restaurant.</h3>
+		<h3>The succes rate for having and not having parking is shown below. Choose whether or not you wish to provide.</h3>
 
 		
 		<div id="content">
 			<div class="content_element" id="suggested_providers">
-				<p id="suggested_providers_title">Interior Designers close to you</p>
+				<p id="suggested_providers_title">Suggested Providers</p>
 				<ul>
 					<% for(var i=0; i<5; i++) { %>
 					<li> 
@@ -39,16 +39,9 @@
 			</div>
 			<div class="content_element" id="statistics">
 				<section id="chart"></section>
-				<div id="images">
-					<p id="divey" class="ambiance_options">Divey</p>
-					<p id="classy" class="ambiance_options">Classy</p>
-					<p id="touristy" class="ambiance_options">Touristy</p>
-					<p id="hipster" class="ambiance_options">Hipster</p>	
-					<p id="trendy" class="ambiance_options">Trendy</p>							
-					<p id="intimate" class="ambiance_options">Intimate</p>	
-					<p id="casual" class="ambiance_options">Casual</p>	
-					<p id="romance" class="ambiance_options">Romance</p>
-					<p id="upscale" class="ambiance_options">Upscale</p>
+				<div>
+					<p class="wifi_options">Street</p>
+					<p class="wifi_options" id="no">Lot</p>
 				</div>
 			</div>
 			
@@ -110,7 +103,7 @@ d3.select('#chart').append('svg')
 
    .on('click', function(d, i) {
        selected = i;
-       location.href = "/saveambience?choice="+selected;
+       location.href = "/saveparking?choice="+selected;
     })
 
 var hAxis = d3.svg.axis()
