--- a/public/stylesheets/mobile_verify.css
+++ b/public/stylesheets/mobile_verify.css
@@ -1,6 +1,6 @@
 #center_container{
 	position: fixed;
-	top: 45%;
+	top: 30%;
 	left: 46%;
 	margin-top: -50px;
 	margin-left: -210px;
@@ -10,5 +10,10 @@
 
 h1 {
 	padding-bottom: 15px;
+}
+
+.form-group img{
+	width: 200px;
+	height: 200px;
 }
 
